--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="app">
     <div class="header">
-    <h1>DOG BLEED</h1>
+    <h1>DOG BREED</h1>
     <div id="dogbleed"></div>
     </div>
-</div>
+    </div>
 <div class="slideshow" id="slideshow"></div>
+
 
 
 <script defer src="index.js"></script>
