--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="app">
     <div class="header">
     <h1>DOG BREED</h1>
-    <div id="dogbleed"></div>
+    <div id="dogbleed" class="dog"></div>
     </div>
     </div>
 <div class="slideshow" id="slideshow"></div>
